# TheBADCoinBot

./: .env  README.md  env.py  main.py  pyproject.toml
badcoin/: bad.py  endpoints.py  headers.py  models.py
telegram/: client.py
utils/: pre_verify.py
