[project]
name = "thebadcoin"
version = "0.1.0"
description = "**TheBADCoinBot** automates various tasks on the BadCoin Telegram Bot, such as tapping and holding, with configurable options for delays and randomization."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyrogram",
    "fake-useragent>=1.5.1",
    "humanize>=4.11.0",
    "loguru>=0.7.2",
    "pyenvloadermeta>=1.0.2",
    "timecalculator>=1.2.1",
    "tgcrypto>=1.2.5",
    "pydantic>=2.10.4",
    "rich>=13.9.4",
    "requests>=2.32.3",
]
